--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,27 @@ code { font-family: 'Fira Code', monospace; }
 }
 
 body {
-    background-color: #333333;
-    color: #F2F2F2;
+    background-color: var(--main-bg);
+    color: var(--main-color);
     font-family: 'Fira Code';
+    padding: 10px;
+}
+
+.bi {
+  fill: var(--main-color);
+  color: var(--main-color);
+
+}
+
+a {
+  color: var(--main-bold-color);
+  text-decoration: none;
+  white-space: pre;
+}
+
+a:visited {
+  color: var(--main-bold-color);
+  text-decoration: none;
 }
 
 p {
