--- a/main.css
+++ b/main.css
@@ -71,7 +71,11 @@ body {
     text-align: center;
     grid-row: 2;
     font-style: unset;
-    text-decoration: underline;
+}
+
+#separator>img {
+    width: 20px;
+    filter: invert(1);
 }
 #separator:hover {
     cursor: pointer;
@@ -222,6 +226,7 @@ body {
     height: 100%;
     max-width: 100%;
     max-height: 100%;
+    filter: invert(1);
 }
 
 .bigpill>svg {
